--- a/index.html
+++ b/index.html
@@ -256,21 +256,29 @@
           dificultades, una Iglesia con un fuerte énfasis en la adoración a Dios, una Iglesia con ministerios centrales
           funcionando a pleno, reuniendo en ellos el modelo del Ministerio de
           Jesucristo (Evangelismo, Incorporación, Calidad de Vida, Adoración, Enseñanza, Obra Social, Administración y
-          Finanzas). <br>
-          Una Iglesia con un pleno desarrollo de las edades para una pastoral cercana (de niños a abuelos), una Iglesia
-          con un liderazgo de primera línea "de amigos en Cristo", que se conocen profundamente, dispuestosma sostenerse
-          entre ellos en los momentos más dificiles, que trabajan con un verdadero pacto de amor, sin buscar lo suyo
-          propio, sin egoismos, teniendo como base la transparencia de sus acciones e inquietudes y bajo
-          la cobertura del Espíritu Santo, en un marco de respeto y perdón, una Iglesia con una economia clara y
-          finanzas transparentes, abierta a cualquier área del liderazgo comprometido, para evitar sospechas y disfrutar
-          del crecimiento que Dios no da, una Iglesia con un llamado a las misiones locales e internacionales, con el
-          anhelo prioritario de plantar iglesias en cada ciudad donde Dios lo muestre y confirme, una Iglesia que
-          predica, proclama y trabaja para la verdadera unidad del Cuerpo de Cristo, en armonía con iglesias hermanas,
-          una Iglesia de pacto, defensora de la comunión entre los hermanos, declarando como único adversario el diaUna
-          Iglesia que anhela armonizar con el propósito del Señor, tomando decisiones en el temor de Dios, sabiendo que
-          Él juzgará las intensiones de nuestro corazón. <br>
-          <br>
-          <strong>Dios nos bendiga!</strong>
+          Finanzas). 
+          <details class="detalles">
+            <summary>Ver más!</summary>
+            Una Iglesia con un pleno desarrollo de las edades para una pastoral cercana (de niños a abuelos), una
+            Iglesia
+            con un liderazgo de primera línea "de amigos en Cristo", que se conocen profundamente, dispuestosma
+            sostenerse
+            entre ellos en los momentos más dificiles, que trabajan con un verdadero pacto de amor, sin buscar lo suyo
+            propio, sin egoismos, teniendo como base la transparencia de sus acciones e inquietudes y bajo
+            la cobertura del Espíritu Santo, en un marco de respeto y perdón, una Iglesia con una economia clara y
+            finanzas transparentes, abierta a cualquier área del liderazgo comprometido, para evitar sospechas y
+            disfrutar
+            del crecimiento que Dios no da, una Iglesia con un llamado a las misiones locales e internacionales, con el
+            anhelo prioritario de plantar iglesias en cada ciudad donde Dios lo muestre y confirme, una Iglesia que
+            predica, proclama y trabaja para la verdadera unidad del Cuerpo de Cristo, en armonía con iglesias hermanas,
+            una Iglesia de pacto, defensora de la comunión entre los hermanos, declarando como único adversario el
+            diaUna
+            Iglesia que anhela armonizar con el propósito del Señor, tomando decisiones en el temor de Dios, sabiendo
+            que
+            Él juzgará las intensiones de nuestro corazón. <br>
+            <br>
+            <strong>Dios nos bendiga!</strong>
+          </details>
         </p>
         <img src="img/collageNuevo.png" alt="">
         <h5 class="t-stroke t-shadow">SOMOS IGLESIA</h5>
@@ -281,6 +289,11 @@
 
     <!--Precursores (Videos de Youtube)-->
     <aside class="aside" id="precursores">
+
+      <div class="multimedia__texto">
+        <h2 class="multimedia__titulo">Multimedia</h2>
+        <h3 class="multimedia__subtitulo">miralas! 📱 💻 </h3>
+      </div>
 
       <!-- Precursores -->
       <div class="aside__texto">
@@ -373,12 +386,12 @@
           </div>
         </div>
 
-        <!--Card matrimonios adultos-->
+        <!--Card Matrimonios jovenes-->
         <div class="iglesia__card" data-aos="zoom-in">
-          <div class="iglesia__imagen iglesia__imagen--matrimoniosGrandes">
+          <div class="iglesia__imagen iglesia__imagen--matrimoniosJovenes">
           </div>
           <div class="iglesia__cardTexto">
-            <h2 class="iglesia__cardTitulo">Matrimonios grandes</h2>
+            <h2 class="iglesia__cardTitulo">Matrimonios jovenes</h2>
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
@@ -386,13 +399,12 @@
           </div>
         </div>
 
-
-        <!--Card Matrimonios jovenes-->
+        <!--Card matrimonios adultos-->
         <div class="iglesia__card" data-aos="zoom-in">
-          <div class="iglesia__imagen iglesia__imagen--matrimoniosJovenes">
+          <div class="iglesia__imagen iglesia__imagen--matrimoniosGrandes">
           </div>
           <div class="iglesia__cardTexto">
-            <h2 class="iglesia__cardTitulo">Matrimonios jovenes</h2>
+            <h2 class="iglesia__cardTitulo">Matrimonios grandes</h2>
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
@@ -433,13 +445,14 @@
     <div class="cuarto">
       <i class="fa-solid fa-lightbulb"></i>
       <h2 class="cuarto__titulo">Cuarto de Adoración e Intercesión</h2>
-      <p class="cuarto__parrafo">Bienvenidos! Gracias por ser parte de este movimiento global que está despertando y activando a la Iglesia</p>
+      <p class="cuarto__parrafo">Bienvenidos! Gracias por ser parte de este movimiento global que está despertando y
+        activando a la Iglesia</p>
       <div class="cuarto__btn">
         <a href="cuarto.html">
           <input type="button" value="ENTRAR!">
         </a>
       </div>
-      
+
     </div>
 
 
