--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           Jesucristo (Evangelismo, Incorporación, Calidad de Vida, Adoración, Enseñanza, Obra Social, Administración y
           Finanzas). 
           <details class="detalles">
-            <summary>Ver más!</summary>
+            <summary>Leer más!</summary>
             Una Iglesia con un pleno desarrollo de las edades para una pastoral cercana (de niños a abuelos), una
             Iglesia
             con un liderazgo de primera línea "de amigos en Cristo", que se conocen profundamente, dispuestosma
