--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           dificultades, una Iglesia con un fuerte énfasis en la adoración a Dios, una Iglesia con ministerios centrales
           funcionando a pleno, reuniendo en ellos el modelo del Ministerio de
           Jesucristo (Evangelismo, Incorporación, Calidad de Vida, Adoración, Enseñanza, Obra Social, Administración y
-          Finanzas). 
+          Finanzas).
           <details class="detalles">
             <summary>Leer más!</summary>
             Una Iglesia con un pleno desarrollo de las edades para una pastoral cercana (de niños a abuelos), una
@@ -277,7 +277,7 @@
             que
             Él juzgará las intensiones de nuestro corazón. <br>
             <br>
-            <strong>Dios nos bendiga!</strong>
+            Dios nos bendiga!
           </details>
         </p>
         <img src="img/collageNuevo.png" alt="">
@@ -441,6 +441,19 @@
       </div>
     </div>
 
+
+    <!-- Ministerios -->
+    <div class="ministerios">
+      <i class="fa-solid fa-chalkboard-user"></i>
+      <h2 class="ministerios__titulo">Ministerios</h2>
+      <p class="ministerios__parrafo">Bienvenidos! </p>
+      <div class="ministerios__btn">
+        <a href="cuarto.html">
+          <input type="button" value="LEER MÁS ">
+        </a>
+      </div>
+    </div>
+
     <!-- Cuarto de oracion -->
     <div class="cuarto">
       <i class="fa-solid fa-lightbulb"></i>
@@ -452,7 +465,6 @@
           <input type="button" value="ENTRAR!">
         </a>
       </div>
-
     </div>
 
 
