--- a/index.html
+++ b/index.html
@@ -444,12 +444,11 @@
 
     <!-- Ministerios -->
     <div class="ministerios">
-      <i class="fa-solid fa-chalkboard-user"></i>
       <h2 class="ministerios__titulo">Ministerios</h2>
-      <p class="ministerios__parrafo">Bienvenidos! </p>
+      <p class="ministerios__parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora placeat neque cum provident nemo? Rem consequuntur distinctio numquam sed praesentium?</p>
       <div class="ministerios__btn">
         <a href="cuarto.html">
-          <input type="button" value="LEER MÁS ">
+          <input type="button" value="LEER MÁS">
         </a>
       </div>
     </div>
