--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <li class="navbar__link"><a href="#mision">vision</a></li>
         <li class="navbar__link"><a href="#precursores">multimedia</a></li>
         <li class="navbar__link"><a href="#actividades">actividades</a></li>
-        <li class="navbar__link"><a href="#testimonios">testimonios</a></li>
+        <li class="navbar__link"><a href="#ministerios">ministerios</a></li>
         <li class="navbar__link"><a href="#galeria">galeria</a></li>
         <li class="navbar__link"><a href="#contacto">contacto</a></li>
       </ul>
@@ -443,12 +443,12 @@
 
 
     <!-- Ministerios -->
-    <div class="ministerios">
+    <div class="ministerios" id="ministerios">
       <h2 class="ministerios__titulo">Ministerios</h2>
       <p class="ministerios__parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora placeat neque cum provident nemo? Rem consequuntur distinctio numquam sed praesentium?</p>
       <div class="ministerios__btn">
         <a href="cuarto.html">
-          <input type="button" value="LEER MÁS">
+          <input type="button" value="ENTRAR!">
         </a>
       </div>
     </div>
