--- a/index.html
+++ b/index.html
@@ -333,7 +333,6 @@
     </aside>
 
     <!-- Actividades de la Iglesia-->
-
     <section class="iglesia" id="actividades">
 
       <div class="iglesia__texto">
@@ -441,30 +440,57 @@
       </div>
     </div>
 
+    <section class="ministerios" id="ministerios">
 
-    <!-- Ministerios -->
-    <div class="ministerios" id="ministerios">
-      <h2 class="ministerios__titulo">Ministerios</h2>
-      <p class="ministerios__parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora placeat neque cum provident nemo? Rem consequuntur distinctio numquam sed praesentium?</p>
-      <div class="ministerios__btn">
-        <a href="cuarto.html">
-          <input type="button" value="ENTRAR!">
-        </a>
-      </div>
-    </div>
+      <!-- Ministerios Nuevo Card -->
+      <div class="ministeriosCard">
+        <div class="ministeriosCard__imagen"></div>
 
-    <!-- Cuarto de oracion -->
-    <div class="cuarto">
-      <i class="fa-solid fa-lightbulb"></i>
-      <h2 class="cuarto__titulo">Cuarto de Adoración e Intercesión</h2>
-      <p class="cuarto__parrafo">Bienvenidos! Gracias por ser parte de este movimiento global que está despertando y
-        activando a la Iglesia</p>
-      <div class="cuarto__btn">
-        <a href="cuarto.html">
-          <input type="button" value="ENTRAR!">
-        </a>
+        <div class="ministeriosCard__texto">
+          <h3 class="ministeriosCard__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
+          <div class="ministeriosCard__titulo">
+            <h2>Ministerios</h2>
+          </div>
+          <div class="ministeriosCard__linea"></div>
+          <div class="ministeriosCard__parrafo">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
+              aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
+              voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
+          </div>
+          <div class="ministeriosCard__btn">
+            <a href="cuarto.html">
+              <input type="button" value="ENTRAR!">
+            </a>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+
+    <section class="cuarto" id="cuarto">
+      <!-- Cuarto de oracion -->
+      <div class="cuartoCard">
+        <div class="cuartoCard__imagen"></div>
+
+        <div class="cuartoCard__texto">
+          <h3 class="cuartoCard__tituloPre">Tristán Suárez 🙌</h3>
+          <div class="cuartoCard__titulo">
+            <h2>Cuarto de Adoración e intercesión</h2>
+          </div>
+          <div class="cuartoCard__linea"></div>
+          <div class="cuartoCard__parrafo">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
+              aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
+              voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
+          </div>
+          <div class="cuartoCard__btn">
+            <a href="cuarto.html">
+              <input type="button" value="ENTRAR!">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
 
     <!-- Testimonios -->
