--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           </div>
           <div class="ministeriosCard__btn">
             <a href="cuarto.html">
-              <input type="button" value="ENTRAR!">
+              <input type="button" value="LEER MAS!">
             </a>
           </div>
         </div>
