--- a/index.html
+++ b/index.html
@@ -478,9 +478,8 @@
           </div>
           <div class="cuartoCard__linea"></div>
           <div class="cuartoCard__parrafo">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
-              aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
-              voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
+            <p>Te animo a que seas parte de esta generación que siendo llenos por el Espiritu Santo claman día y noche, apasionados por ver a Jesús regresar y gobernar en las naciones desde Jerusalén.
+            Este clamor es cada vez más intenso y va en aumento. No pararemos de cantar y adorar HASTA que EL venga.</p>
           </div>
           <div class="cuartoCard__btn">
             <a href="cuarto.html">
