--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="elemento__texto">
         <h1 class="elemento__titulo">
-          "ESPERANDO AL QUE HA DE VENIR"
+          "El que es, El que era y El ha de venir"
         </h1>
       </div>
 
