--- a/index.html
+++ b/index.html
@@ -233,13 +233,6 @@
       </div>
     </section>
 
-    <!--banner-->
-    <div class="banner">
-      <p class="banner__titulo">"No entres en pánico, Dios gobierna en tu tormenta"
-      </p><cite>-Pr. Javier Corsi-</cite>
-      <img class="banner__img" src="img/avatarJavier.png" alt="">
-    </div>
-
     <!--Mision y Vision-->
     <section class="mision" id="mision">
       <div class="mision__texto">
@@ -285,6 +278,13 @@
 
       </div>
     </section>
+
+    <!--banner-->
+    <div class="banner">
+      <p class="banner__titulo">"No entres en pánico, Dios gobierna en tu tormenta"
+      </p><cite>-Pr. Javier Corsi-</cite>
+      <img class="banner__img" src="img/avatarJavier.png" alt="">
+    </div>
 
 
     <!--Precursores (Videos de Youtube)-->
@@ -478,8 +478,10 @@
           </div>
           <div class="cuartoCard__linea"></div>
           <div class="cuartoCard__parrafo">
-            <p>Te animo a que seas parte de esta generación que siendo llenos por el Espiritu Santo claman día y noche, apasionados por ver a Jesús regresar y gobernar en las naciones desde Jerusalén.
-            Este clamor es cada vez más intenso y va en aumento. No pararemos de cantar y adorar HASTA que EL venga.</p>
+            <p>Te animo a que seas parte de esta generación que siendo llenos por el Espiritu Santo claman día y noche,
+              apasionados por ver a Jesús regresar y gobernar en las naciones desde Jerusalén.
+              Este clamor es cada vez más intenso y va en aumento. No pararemos de cantar y adorar HASTA que EL venga.
+            </p>
           </div>
           <div class="cuartoCard__btn">
             <a href="cuarto.html">
