cuarto de adoracion

--- a/cuarto.html
+++ b/cuarto.html
@@ -77,16 +77,73 @@
                     Te esperamos todos los domingos a partir de las 09:20hs en Natta 362- Tristan Suarez- Argentina.
                 </p>
             </div>
+
+            <div class="cuarto__btn">
+                <a href="#contenido">
+                    <input type="button" value="VER MÁS! 👇">
+                </a>
+            </div>
         </div>
 
         <!-- Section -->
-        <section class="contenido">
+        <section class="contenido" id="contenido">
             <div class="contenido__texto">
                 <h2 class="contenido__titulo">
-
+                    Clamar día y noche! 🙌
                 </h2>
+                <p class="contenido__parrafo">
+                    (...) ¿acaso no creen que Dios hará justicia a su pueblo escogido que <span>clama a él día y
+                        noche?</span>¿Seguirá aplazando su respuesta?. Les digo, <span>¡él pronto les hará
+                        justicia!</span> Pero cuando el Hijo del hombre regrese, ¿a cuantas personas con fe encontrará
+                    en la tierra?.
+                    <blockquote cite="biblia">Lucas 18:7-8 NTV</blockquote>
+                </p>
+            </div>
+        </section>
+
+
+
+        <!--Galeria de imagenes-->
+        <section class="galeria" id="galeria">
+
+            <div class="galeria__texto">
+                <h2 class="galeria__titulo">Galeria</h2>
+                <h3 class="galeria__subtitulo">imagenes! 😎 </h3>
             </div>
 
+            <div class="galeria__grid">
+                <figure class="galeria__picture galeria__picture--g1">
+                    <img src="img/cuarto1.jpg" class="galeria__img">
+                </figure>
+
+                <figure class="galeria__picture galeria__picture--g2">
+                    <img src="img/cuarto2.jpg" class="galeria__img">
+                </figure>
+
+                <figure class="galeria__picture galeria__picture--g3">
+                    <img src="img/cuarto3.jpg" class="galeria__img">
+                </figure>
+
+                <figure class="galeria__picture galeria__picture--g4">
+                    <img src="img/cuarto4.jpg" class="galeria__img">
+                </figure>
+
+                <figure class="galeria__picture galeria__picture--g5">
+                    <img src="img/cuarto5.jpg" class="galeria__img">
+                </figure>
+
+                <figure class="galeria__picture galeria__picture--g6">
+                    <img src="img/cuarto6.jpg" class="galeria__img">
+                </figure>
+
+                <figure class="galeria__picture galeria__picture--g7">
+                    <img src="img/galeriaSiete.jpg" class="galeria__img">
+                </figure>
+
+                <figure class="galeria__picture galeria__picture--g8">
+                    <img src="img/galeriaOcho.jpg" class="galeria__img">
+                </figure>
+            </div>
         </section>
 
 
