--- a/index.html
+++ b/index.html
@@ -466,6 +466,13 @@
       </div>
     </section>
 
+    <!--banner-->
+    <div class="banner">
+      <p class="banner__titulo">"No entres en pánico, Dios gobierna en tu tormenta"
+      </p><cite>-Pr. Javier Corsi-</cite>
+      <img class="banner__img" src="img/avatarJavier.png" alt="">
+    </div>
+
     <section class="cuarto" id="cuarto">
       <!-- Cuarto de oracion -->
       <div class="cuartoCard">
