--- a/index.html
+++ b/index.html
@@ -440,6 +440,9 @@
       </div>
     </div>
 
+    <div class="ribbonUno">
+    </div>
+
     <section class="ministerios" id="ministerios">
 
       <!-- Ministerios Nuevo Card -->
@@ -466,11 +469,7 @@
       </div>
     </section>
 
-    <!--banner-->
-    <div class="banner">
-      <p class="banner__titulo">"No entres en pánico, Dios gobierna en tu tormenta"
-      </p><cite>-Pr. Javier Corsi-</cite>
-      <img class="banner__img" src="img/avatarJavier.png" alt="">
+    <div class="ribbon">
     </div>
 
     <section class="cuarto" id="cuarto">
