--- a/index.html
+++ b/index.html
@@ -440,7 +440,18 @@
       </div>
     </div>
 
+    <!-- <div class="ribbonUno">
+      <div class="ribbonUno__parrafo">
+        <p>"Hagan Planes ligados en el Espíritu"</p>
+        <cite>-Pr. Javier Corsi-</cite>
+      </div>
+    </div> -->
+
+    <!--ribbonUno-->
     <div class="ribbonUno">
+      <p class="ribbonUno__titulo">"Hagan Planes ligados en el Espíritu"
+      </p><cite>-Pr. Javier Corsi-</cite>
+      <img class="ribbonUno__img" src="img/avatarJavier.png" alt="">
     </div>
 
     <section class="ministerios" id="ministerios">
@@ -470,7 +481,9 @@
     </section>
 
     <div class="ribbon">
+      <div class="ribbon__diagonal"></div>
     </div>
+
 
     <section class="cuarto" id="cuarto">
       <!-- Cuarto de oracion -->
