--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
         </div>
       </div>
     </section>
-
+    <!-- ribbon -->
     <div class="ribbon">
       <div class="ribbon__diagonal"></div>
     </div>
