ribbon uno responsive

--- a/index.html
+++ b/index.html
@@ -440,23 +440,50 @@
       </div>
     </div>
 
-    <!-- <div class="ribbonUno">
-      <div class="ribbonUno__parrafo">
-        <p>"Hagan Planes ligados en el Espíritu"</p>
-        <cite>-Pr. Javier Corsi-</cite>
-      </div>
-    </div> -->
-
     <!--ribbonUno-->
     <div class="ribbonUno">
+
       <p class="ribbonUno__titulo">"Hagan Planes ligados en el Espíritu"
       </p><cite>-Pr. Javier Corsi-</cite>
       <img class="ribbonUno__img" src="img/avatarJavier.png" alt="">
+
+      <div class="ribbonUno__card">
+
+        <div class="ribbonUno__card__imagen"></div>
+
+        <div class="ribbonUno__card__texto">
+
+          <h3 class="ribbonUno__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
+
+          <div class="ribbonUno__card__titulo">
+            <h2>Ministerios</h2>
+          </div>
+
+          <div class="ribbonUno__card__linea"></div>
+
+          <div class="ribbonUno__card__parrafo">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
+              aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
+              voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
+          </div>
+
+          <div class="ribbonUno__card__btn">
+            <a href="cuarto.html">
+              <input type="button" value="LEER MAS!">
+            </a>
+          </div>
+
+        </div>
+
+      </div>
+
     </div>
 
+
+
+    <!-- 
     <section class="ministerios" id="ministerios">
 
-      <!-- Ministerios Nuevo Card -->
       <div class="ministeriosCard">
         <div class="ministeriosCard__imagen"></div>
 
@@ -478,7 +505,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
+
+
     <!-- ribbon -->
     <div class="ribbon">
       <div class="ribbon__diagonal"></div>
