--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
       </p><cite>-Pr. Javier Corsi-</cite>
       <img class="ribbonUno__img" src="img/avatarJavier.png" alt="">
 
-      <div class="ribbonUno__card">
+      <div class="ribbonUno__card" id="ministerios">
 
         <div class="ribbonUno__card__imagen"></div>
 
@@ -478,35 +478,6 @@
       </div>
 
     </div>
-
-
-
-    <!-- 
-    <section class="ministerios" id="ministerios">
-
-      <div class="ministeriosCard">
-        <div class="ministeriosCard__imagen"></div>
-
-        <div class="ministeriosCard__texto">
-          <h3 class="ministeriosCard__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
-          <div class="ministeriosCard__titulo">
-            <h2>Ministerios</h2>
-          </div>
-          <div class="ministeriosCard__linea"></div>
-          <div class="ministeriosCard__parrafo">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
-              aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
-              voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
-          </div>
-          <div class="ministeriosCard__btn">
-            <a href="cuarto.html">
-              <input type="button" value="LEER MAS!">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
 
     <!-- ribbon -->
     <div class="ribbon">
