--- a/index.html
+++ b/index.html
@@ -94,15 +94,20 @@
         <li class="navbar__link"><a href="#ministerios">ministerios</a></li>
         <li class="navbar__link"><a href="#galeria">galeria</a></li>
         <li class="navbar__link"><a href="#contacto">contacto</a></li>
+
+        <div class="navbar__social navbarSocial--on">
+          <a href=""><img src="img/facebook icono.svg" class="navFace" alt=""></a>
+          <a href=""><img src="img/instagram icono.svg" class="navInsta" alt=""></a>
+          <a href=""><img src="img/youtube icono.svg" class="navYoutube" alt=""></a>
+        </div>
+
       </ul>
 
       <!--SEGUINOS-->
       <div class="navbar__social">
-        <a href="https://www.facebook.com/iglesiaelencuentrotristansuarez" target="_blank"
-          class="fa-brands fa-facebook"></a>
-        <a href="https://www.instagram.com/elencuentrosuarez/" target="_blank" class="fa-brands fa-instagram"></a>
-        <a href="https://www.youtube.com/channel/UCe3bVhfZwy2gGYxdCHOCVkQ" target="_blank"
-          class="fa-brands fa-youtube"></a>
+        <a href=""><img src="img/facebook icono.svg" class="navFace" alt=""></a>
+        <a href=""><img src="img/instagram icono.svg" class="navInsta" alt=""></a>
+        <a href=""><img src="img/youtube icono.svg" class="navYoutube" alt=""></a>
       </div>
 
 
@@ -127,13 +132,6 @@
         <a href="#rehma">
           <input type="button" value="VER MÁS">
         </a>
-      </div>
-
-      <div class="main__social">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://instagram.com/elencuentrosuarez?utm_medium=copy_link" target="_blank"><i
-            class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-youtube "></i></a>
       </div>
     </main>
 
