--- a/index.html
+++ b/index.html
@@ -279,8 +279,9 @@
 
     <!--banner-->
     <div class="banner">
-      <p class="banner__titulo">"No entres en pánico, Dios gobierna en tu tormenta"
-      </p><cite>-Pr. Javier Corsi-</cite>
+      <p class="banner__titulo" id="bannerTitulo">"No entres en pánico, Dios gobierna en tu tormenta"
+        <cite>-Pr. Javier Corsi-</cite>
+      </p>
       <img class="banner__img" src="img/avatarJavier.png" alt="">
     </div>
 
