--- a/index.html
+++ b/index.html
@@ -272,8 +272,7 @@
           </details>
         </p>
         <img src="img/collageNuevo.png" alt="">
-        <h5 class="t-stroke t-shadow">SOMOS IGLESIA</h5>
-
+        <h5 class="t-stroke t-shadow" id="stroke">SOMOS IGLESIA</h5>
       </div>
     </section>
 
@@ -284,7 +283,6 @@
       </p>
       <img class="banner__img" src="img/avatarJavier.png" alt="">
     </div>
-
 
     <!--Precursores (Videos de Youtube)-->
     <aside class="aside" id="precursores">
@@ -446,34 +444,70 @@
       </p><cite>-Pr. Javier Corsi-</cite>
       <img class="ribbonUno__img" src="img/avatarJavier.png" alt="">
 
+      <!-- Card 1 -->
       <div class="ribbonUno__card" id="ministerios">
-
         <div class="ribbonUno__card__imagen"></div>
-
         <div class="ribbonUno__card__texto">
-
           <h3 class="ribbonUno__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
-
           <div class="ribbonUno__card__titulo">
             <h2>Ministerios</h2>
           </div>
-
           <div class="ribbonUno__card__linea"></div>
-
           <div class="ribbonUno__card__parrafo">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
               aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
               voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
           </div>
-
           <div class="ribbonUno__card__btn">
             <a href="cuarto.html">
               <input type="button" value="LEER MAS!">
             </a>
           </div>
-
         </div>
+      </div>
 
+      <!-- Card 2 -->
+      <div class="ribbonUno__card" id="ministerios">
+        <div class="ribbonUno__card__imagen"></div>
+        <div class="ribbonUno__card__texto">
+          <h3 class="ribbonUno__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
+          <div class="ribbonUno__card__titulo">
+            <h2>Ministerios</h2>
+          </div>
+          <div class="ribbonUno__card__linea"></div>
+          <div class="ribbonUno__card__parrafo">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
+              aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
+              voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
+          </div>
+          <div class="ribbonUno__card__btn">
+            <a href="cuarto.html">
+              <input type="button" value="LEER MAS!">
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="ribbonUno__card" id="ministerios">
+        <div class="ribbonUno__card__imagen"></div>
+        <div class="ribbonUno__card__texto">
+          <h3 class="ribbonUno__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
+          <div class="ribbonUno__card__titulo">
+            <h2>Ministerios</h2>
+          </div>
+          <div class="ribbonUno__card__linea"></div>
+          <div class="ribbonUno__card__parrafo">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
+              aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
+              voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
+          </div>
+          <div class="ribbonUno__card__btn">
+            <a href="cuarto.html">
+              <input type="button" value="LEER MAS!">
+            </a>
+          </div>
+        </div>
       </div>
 
     </div>
