--- a/index.html
+++ b/index.html
@@ -440,9 +440,14 @@
     <!--ribbonUno-->
     <div class="ribbonUno">
 
-      <p class="ribbonUno__titulo">"Hagan Planes ligados en el Espíritu"
+      <div class="multimedia__texto">
+        <h2 class="multimedia__titulo">Multimedia</h2>
+        <h3 class="multimedia__subtitulo">miralas! 📱 💻 </h3>
+      </div>
+
+      <!-- <p class="ribbonUno__titulo">"Hagan Planes ligados en el Espíritu"
       </p><cite>-Pr. Javier Corsi-</cite>
-      <img class="ribbonUno__img" src="img/avatarJavier.png" alt="">
+      <img class="ribbonUno__img" src="img/avatarJavier.png" alt=""> -->
 
       <!-- Card 1 -->
       <div class="ribbonUno__card" id="ministerios">
@@ -489,6 +494,28 @@
       </div>
 
       <!-- Card 3 -->
+      <div class="ribbonUno__card" id="ministerios">
+        <div class="ribbonUno__card__imagen"></div>
+        <div class="ribbonUno__card__texto">
+          <h3 class="ribbonUno__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
+          <div class="ribbonUno__card__titulo">
+            <h2>Ministerios</h2>
+          </div>
+          <div class="ribbonUno__card__linea"></div>
+          <div class="ribbonUno__card__parrafo">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
+              aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
+              voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
+          </div>
+          <div class="ribbonUno__card__btn">
+            <a href="cuarto.html">
+              <input type="button" value="LEER MAS!">
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 4 -->
       <div class="ribbonUno__card" id="ministerios">
         <div class="ribbonUno__card__imagen"></div>
         <div class="ribbonUno__card__texto">
